# nature-of-code

./: Cargo.toml
src/: main.rs
src/demos/: levy_flight.rs  mod.rs  perlin_walker.rs  random_walk.rs  random_walk_bounded.rs  random_walk_centered.rs
src/libs/: perlin_noise.rs
