[package]
name = "nature-of-code"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1" }
noise = "0.9.0"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
